Add Facebook to Background Page

--- a/src/background.html
+++ b/src/background.html
@@ -16,6 +16,8 @@
 		</script>
 		<script type="text/javascript" src="scripts/services/googlewave.js">
 		</script>
+		<script type="text/javascript" src="scripts/services/facebook.js">
+		</script>
 		
 		<script type="text/javascript">
       var debug = false;
