--- a/src/background.html
+++ b/src/background.html
@@ -18,6 +18,8 @@
 		</script>
 		<script type="text/javascript" src="scripts/services/facebook.js">
 		</script>
+		<script type="text/javascript" src="scripts/services/route50.js">
+		</script>
 		
 		<script type="text/javascript">
       var debug = false;
