Fixed README name.
Updated changelog and manifest with new version info.

Added github link to about page.

--- a/src/changelog.html
+++ b/src/changelog.html
@@ -64,10 +64,22 @@
     </a>
 		<div class="section" id="authorinfo">
 			<p id="name" i18n-content="name">One Number</p>
+			<p><a href="https://github.com/The-MAZZTer/One-Number">https://github.com/The-MAZZTer/One-Number</a></p>
 			<p i18n-content="by">by Dan Bugglin</p>
 			<p><a href="http://www.mzzt.net/">http://www.mzzt.net/</a></p>
 			<p><a href="mailto:megazzt@gmail.com">megazzt@gmail.com</a></p>
 			<p class="para" i18n-content="description"></p>
+		</div>
+    <a class="section-header" href="javascript:;"
+      onclick="expandCollapse('v1_5_4');">
+      <img src="images/pages/collapse.png" id="v1_5_4button" alt="Collapse"
+        title="Collapse" i18n-values="alt:collapse; title:collapse;" />
+      <span>v1.5.4</span>
+    </a>
+		<div class="section" id="v1_5_4">
+			<ul>
+				<li>Fix for breaking API change in Chrome 19.</li>
+			</ul>
 		</div>
     <a class="section-header" href="javascript:;"
       onclick="expandCollapse('v1_5_3');">
