Updated version number and changelog

--- a/src/changelog.html
+++ b/src/changelog.html
@@ -41,6 +41,17 @@
 			<p class="para" i18n-content="description"></p>
 		</div>
     <a class="section-header" href="javascript:;">
+      <img src="images/pages/collapse.png" id="v1_5_6button" alt="Collapse"
+        title="Collapse" i18n-values="alt:collapse; title:collapse;" />
+      <span>v1.5.6</span>
+    </a>
+		<div class="section" id="v1_5_6">
+			<ul>
+				<li>Made changes to support manifest_version 2.</li>
+				<li>Removed Google Wave support.</li>
+			</ul>
+		</div>
+    <a class="section-header" href="javascript:;">
       <img src="images/pages/collapse.png" id="v1_5_5button" alt="Collapse"
         title="Collapse" i18n-values="alt:collapse; title:collapse;" />
       <span>v1.5.5</span>
